// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Button Bezel smoke-test 1`] = `
<div style="position: relative; width: 100%; height: 300px; display: flex; align-items: center; justify-content: center;">
  <button type="button"
          class="_btn_1vb4e_1 _btn_primary_1vb4e_35 _btn_md_1vb4e_199 _bezel_1vb4e_35"
  >
    Your Button
  </button>
</div>
`;

exports[`Components/Button Customized smoke-test 1`] = `
<div style="position: relative; width: 100%; height: 300px; display: flex; align-items: center; justify-content: center;">
  <button type="button"
          class="_btn_1vb4e_1 _btn_primary_1vb4e_35 _btn_md_1vb4e_199 _pill_1vb4e_259 _flat_1vb4e_87"
          style="background: rgb(82, 78, 86); color: rgb(255, 255, 255); width: 280px;"
  >
    <div class="_icon_wrapper_1j07s_1"
         style="width: 22px; height: 22px;"
    >
      <svg width="22"
           height="22"
           viewbox="0 0 32 32"
           stroke="#ffffff"
           fill="none"
      >
        <g id="cross">
          <line stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                x1="7"
                x2="25"
                y1="7"
                y2="25"
          >
          </line>
          <line stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                x1="7"
                x2="25"
                y1="25"
                y2="7"
          >
          </line>
        </g>
      </svg>
    </div>
    Customized Pill Shaped
  </button>
</div>
`;

exports[`Components/Button Flat smoke-test 1`] = `
<div style="position: relative; width: 100%; height: 300px; display: flex; align-items: center; justify-content: center;">
  <button type="button"
          class="_btn_1vb4e_1 _btn_primary_1vb4e_35 _btn_md_1vb4e_199 _flat_1vb4e_87"
  >
    Your Button
  </button>
</div>
`;

exports[`Components/Button Link smoke-test 1`] = `
<div style="position: relative; width: 100%; height: 300px; display: flex; align-items: center; justify-content: center;">
  <button type="button"
          class="_btn_1vb4e_1 _btn_link_1vb4e_283 _btn_md_1vb4e_199 _bezel_1vb4e_35"
  >
    This is a link button
  </button>
</div>
`;

exports[`Components/Button Outline smoke-test 1`] = `
<div style="position: relative; width: 100%; height: 300px; display: flex; align-items: center; justify-content: center;">
  <button type="button"
          class="_btn_1vb4e_1 _btn_outline_1vb4e_139 _btn_md_1vb4e_199 _flat_1vb4e_87"
  >
    Your Button
  </button>
</div>
`;

exports[`Components/Button WithIcon smoke-test 1`] = `
<div style="position: relative; width: 100%; height: 300px; display: flex; align-items: center; justify-content: center;">
  <button type="button"
          class="_btn_1vb4e_1 _btn_primary_1vb4e_35 _btn_md_1vb4e_199 _bezel_1vb4e_35"
  >
    <div class="_icon_wrapper_1j07s_1"
         style="width: 18px; height: 18px;"
    >
      <svg width="18"
           height="18"
           viewbox="0 0 32 32"
           stroke="#ffffff"
           fill="none"
      >
        <g id="cross">
          <line stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                x1="7"
                x2="25"
                y1="7"
                y2="25"
          >
          </line>
          <line stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                x1="7"
                x2="25"
                y1="25"
                y2="7"
          >
          </line>
        </g>
      </svg>
    </div>
    With Icon
  </button>
</div>
`;
